# v-c-tool

./: .gitignore  README.md  meson.build
include/vctool/: certificate.h  commandline.h  components.h  crypt.h  file.h  readpassword.h  status_codes.h
include/vctool/command/: help.h  keygen.h  pubkey.h  root.h
include/vctool/status_codes/: certificate.h  commandline.h  file.h  general.h  readpassword.h
src/certificate/: certificate_decrypt.c  certificate_encrypt.c  keypair_certificate_create.c  pubkey_certificate_create.c
src/command/help/: help_print.c  process_help_command.c
src/command/keygen/: keygen_command_func.c  keygen_command_init.c  process_keygen_command.c
src/command/pubkey/: process_pubkey_command.c  pubkey_command_func.c  pubkey_command_init.c
src/command/root/: dispatch_root_commands.c  root_command_init.c
src/commandline/: command_execute.c  commandline_opts_init.c
src/crypt/: crypt_cipher_mac_init_from_password.c
src/file/: file_close.c  file_init.c  file_open.c  file_read.c  file_stat.c  file_write.c
src/readpassword/: readpassword.c
src/vctool/: main.c
subprojects/: gtest.wrap  libevent.wrap  lmdb.wrap  minunit.wrap  vcblockchain.wrap  vccert.wrap  vccrypt.wrap  vcdb.wrap  vcmodel.wrap  vpr.wrap
test/file/: mock_file.cpp  mock_file.h  test_file.cpp
